--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build
         run: npm run build
       - name: Deploy
-        run: ng deploy --base-href=/riverside-live/ --name={{ secrets.ANGULAR_CLI_GHPAGES_COMMIT_NAME }} --email=${{ secrets.ANGULAR_CLI_GHPAGES_COMMIT_EMAIL }}
+        run: npm run deploy -- --base-href=/riverside-live/ --name={{ secrets.ANGULAR_CLI_GHPAGES_COMMIT_NAME }} --email=${{ secrets.ANGULAR_CLI_GHPAGES_COMMIT_EMAIL }}
         env:
           CI: true
           GH_TOKEN: ${{ secrets.ANGULAR_CLI_GHPAGES_COMMIT_GH_TOKEN }}
